app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */

/* Custom bootstrap variables must be set or imported *before* bootstrap. */
@import "bootstrap";
/* Import scss content */
@import "**/*";

* {
  font-family: Karla, Helvetica, sans-serif;
}

main {
  min-height: 95vh;
  max-height: auto;
}

footer {
  height: 5vh;
}

section.intro {
  background-image: linear-gradient(-120deg, rgb(37, 79, 107), rgba(37, 79, 107, 0.85), rgb(37, 79, 107));
  width: auto;
  height: 95vh;
  margin: 0;
  padding: 6rem;
}

nav li {
  list-style-type: none;
}

main li {
  list-style-type: none;
}

.intro {
  text-align: center;
  padding-top: 200px;
}

main {
  // padding: 50px;
}

main a {
  font-family: Work+Sans, Helvetica, sans-serif;
  color: black;
  text-transform: uppercase;
  font-weight: bold;
}

product-index a:hover {
  color: white;
  text-decoration: none;
}

a:hover {
  color: grey;
  text-decoration: none;
}

h2 {
  text-align: center;
}

header a {
  color: gray;
}

header a:hover {
  color: black;
}

a.site-title:hover {
  text-shadow: -4px 4px lightgrey;
  color: black;
}

.product-index {
  display: flex;
  flex-wrap: wrap;
  // // align-content: center;
  // justify-content: center;
  // align-items: center;
  // justify-items: center;
  // flex-direction: column;
  justify-content: space-around;
}

.product-item {
  display: block;
  width: 400px;
  // min-height: 400px;
  margin: 20px;
  padding: 20px;
  // border: .5px solid grey;
}

.product-item > *{
  text-align: center;
  padding: 5px;
}

.product-item:hover {
  background-color: lightgrey;
}

.product-description {
  font-style: italic;
  color: grey;
}

.product-name {
  margin: 0px;
}

.product-rating {
  color: white;
}

p {
  margin: 0px;
}

.emphasize {
  font-weight: bold;
}

.product-none {
  text-align: center;
  font-style: italic;
  margin: 50px;
  color: grey;
}

.site_title {
  font-weight: bolder;
  color: white;
  font-size: 10rem;
  padding: 0;
}

.site_title {
  font-family: Work+Sans, Helvetica, sans-serif;
  font-weight: bolder;
  color: white;
  position: relative;
  top: -45px;
  font-size: 10rem;
}

@keyframes fade {
  0% {opacity: 0;}
  50% {opacity: 0;}
  100% {opacity: 1;}
}

#scam_fade {
  animation-name: fade;
  transition-delay: 2s;
  animation-duration: 3s;
}

.product-show {
  display: grid;
  grid-template-columns: 1fr 2fr;
  margin-left: 15%;
  margin-right: 15%;
}

.product-reviews {
  padding: 35px;
  margin-left: 15%;
  margin-right: 15%;
}

.product-show > *{
  padding: 20px;
}

.product-show img {
  text-align: center;
}

.product-reviews {
  background-color: rgba(128, 128, 128, 0.132);
}

.product-image {
  align-self: center;
}

.product-info table {
  border-collapse: separate;
  border-spacing: 1em;
  vertical-align: middle;
}

.product-info td {
  font-weight: bold;
  border-top: none;
  margin: 10px;
  padding: 0px;
}

.product-info th {
  text-transform: uppercase;
  color: grey;
  text-align: right;
  border-right: solid grey 1px;
  padding-top: 0px;
  border-top: none;
  margin: 10px;
}

.product-title {
  text-align: center;
}

.product-add-to-cart .submit-button {
  margin-left: 10px;
}

.product-reviews {
  margin-top: 50px;
  grid-column-start: 0;
  grid-column-end: 3;
}

.leave-review {
  padding-bottom: 50px;
}

.review-description-form {
  width: 100%;
}

.intro div {
  margin: 6rem;
}

